--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -54,26 +54,28 @@
 
 
 
-       <CheckBox
-           android:id="@+id/ch_favorite"
-           android:layout_marginStart="20dp"
-           android:layout_marginEnd="20dp"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:button="@drawable/favorite_button"
-           android:layout_weight="1"/>
+    <CheckBox
+        android:id="@+id/ch_favorite"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:button="@drawable/favorite_button"
+        android:layout_weight="1"/>
 
-       <ImageView
-           android:id="@+id/iv_add_Comment"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:src="@drawable/ic_add_comment"
-           android:layout_weight="1"/>
+    <ImageView
+        android:id="@+id/iv_add_Comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_comment"
+        android:contentDescription="@string/desc"
+        android:layout_weight="1"/>
     <ImageView
         android:id="@+id/iv_add_to_widget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add_to_widget"
+        android:contentDescription="@string/desc"
         android:layout_weight="1"/>
 
 </LinearLayout>
