--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -45,7 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="3dp"
-            android:layout_gravity="right"/>
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"/>
 
 
 
