--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -25,6 +25,7 @@
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:layout_marginTop="127dp"
+               android:contentDescription="@string/desc"
                android:src="@android:drawable/ic_menu_share" />
 
 
@@ -44,7 +45,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-            android:text="text"
             android:textColor="@android:color/black"
             android:textSize="25dp" />
 <LinearLayout
@@ -90,7 +90,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:text="text"
         android:textColor="@color/colorPrimary"
         android:textSize="15dp"
         android:layout_weight="1"/>
@@ -102,7 +101,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:text="text"
         android:textColor="@color/colorPrimary"
         android:textSize="15dp"
         android:layout_weight="1"/>
@@ -114,7 +112,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
-        android:text="textttttttttt"
         android:textSize="25dp"
         android:padding="10dp" />
 
