--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:text="text"
         android:textColor="@android:color/black"
         android:textSize="25dp" />
 
@@ -56,7 +55,7 @@
             android:id="@+id/btn_send_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ok" />
+            android:text="@string/ok" />
 
     </LinearLayout>
 
